@@ -1,14 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST Radicale-0.6.2.tar.gz 30784 RMD160 8b2559116f6f196a610069d8f9fde7d640c3cbb6 SHA1 c80be198b3ea7c47f73642b1e7e76fdb0ed20e9d SHA256 90067706ef8f03a7debcea5c91e87ff94756dfc59eaad26d13d4cd84cda592c9
-DIST Radicale-0.6.3.tar.gz 30993 RMD160 e7ec0be50a164b0bffa46688e47a3ada2d56e697 SHA1 de478e41a61ccf039e1e1da603ef275f500e44f5 SHA256 bd2c2058e1222735981639206eade3082f6ff76a0055bd010ae0f8b2b33ee8f6
-DIST Radicale-0.6.4.tar.gz 30994 RMD160 9da7aede8ec48fa9725a85985cd3e6e3bd277689 SHA1 15854dd3a7070ef8438573b4a9fef92a2b46b8ab SHA256 83fd6d1b958cd2eae7fa8d773db508e1a4f87266e48346016d03e2b2c7eb80ea
-DIST Radicale-0.7.tar.gz 34061 RMD160 6acf53c591fd9b5d425d226e2c0737ae80ab689e SHA1 2f248e61957cb9c99b404d73b17dbac72875fa68 SHA256 f3d17d16bac4cbeedc5e66a8b711f29d51309e9264a9ef930b5d466503794c09
+DIST Radicale-0.7.tar.gz 34061 SHA256 f3d17d16bac4cbeedc5e66a8b711f29d51309e9264a9ef930b5d466503794c09 SHA512 7c7fb9ad0b9820d490f615af9193bbbbb204aee9f940264221d2e74ef72ffcc28bdb84b97dcd225efe117d346e386465c25c1798875831587033341e432716f0 WHIRLPOOL e6322e41c0ebcf19eb8874f574a797a4aa4c63822587be4c59ebce105c2b19b9e9bc1dc09890f5a5d0a5d95a6029ab6ab8ea0f82362d3f893a65d91d42482e22
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk/KMdoACgkQiIP6VqMIqNc4XwD/TDVP1PuovJi5Pe91p5yC8tSD
-sqO9F+Djph9uDnd68VcA/1PCFQCaXFAfEbiNmGr3a3IQQjuVMLAxBbWPLOahcyog
-=k7lY
+iF4EAREIAAYFAlAcwXgACgkQiIP6VqMIqNeoGAEAhLl7NtryGQOSOaA3ZZTnyle+
+QdgHjOudyLrXWaGhTGoBAInNHP0KpEIiNvx5F99my0m9RQ+/sIrd+J75wOKDVn43
+=SYvU
 -----END PGP SIGNATURE-----
