@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Aug 2012; Hans de Graaff <graaff@gentoo.org> -radicale-0.6.2.ebuild,
+  -radicale-0.6.3.ebuild, -radicale-0.6.4.ebuild:
+  Cleanup.
+
 *radicale-0.7 (02 Jun 2012)
 
   02 Jun 2012; Hans de Graaff <graaff@gentoo.org> +radicale-0.7.ebuild:
